[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "md-tree-viewer"
version = "0.2.1"
description = "A local, read-only web viewer that lists Markdown / PDF / SVG files in a directory tree and renders the selected one (stdlib only)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "furuse-kazufumi", email = "kazufumi@furuse.work" }]
keywords = ["markdown", "viewer", "documentation", "mermaid", "pdf", "svg", "tree", "local", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Utilities",
]
dependencies = []   # standard library only

[project.optional-dependencies]
test = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/furuse-kazufumi/md-tree-viewer"
Repository = "https://github.com/furuse-kazufumi/md-tree-viewer"
Issues = "https://github.com/furuse-kazufumi/md-tree-viewer/issues"

[project.scripts]
mdtree = "md_tree_viewer.viewer:main"

[tool.hatch.build.targets.wheel]
packages = ["src/md_tree_viewer"]

[tool.hatch.build.targets.sdist]
include = ["src/md_tree_viewer", "README.md", "LICENSE", "CHANGELOG.md", "tests"]
